--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </span>
                 <p>wishlist</p>
             </li>
-            <li class="bag">
+            <li class="bag" onclick="loadBagItems();">
                 <span class="material-symbols-outlined shopping_bag">
                     shopping_bag
                 </span>
