Checkout Section Complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="pop-up"></div>
     <nav class="nav-bar">
         <div class="logo"><img src="./assets/myntra.png" alt="Myntra Logo">
             <p>Myntra</p>
@@ -63,27 +64,7 @@
                     
                 </div>
                 <div class="checkout-area">
-                    <div class="promo">
-                        <input type="text" name="promo" id="promo" class="promo-input" placeholder="Promo Code">
-                        <div class="promo-submit-btn">Submit</div>
-                    </div>
-                    <div class="cost-calc">
-                        <div class="shipping">
-                            <h3>Shipping cost</h3>
-                            <h3 class="discount">Discount</h3>
-                            <h2>Estimated Total </h2>
-                        </div>
-                        <div class="price">
-                            <h3>49</h3>
-                            <h3 class="discount">Rs. 1023</h3>
-                            <h2>Rs. 265</h2>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <span class="material-symbols-outlined">
-                            lock
-                        </span> <span>Checkout</span>
-                    </div>
+                    
                 </div>
             </div>
         </div>
