--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     shopping_bag
                 </span>
                 <span class="bagItemCount">0</span>
-                <p>bag</p>
+                <p>Cart</p>
             </li>
         </ul>
     </nav>
